--- a/index.html
+++ b/index.html
@@ -1,9 +1,207 @@
 <!DOCTYPE html>
 <html >
-<head>
-    <title>Document</title>
+<head><meta>
+    <title>Pags Streamers</title>
+
+    <link rel="stylesheet" href="CSS/index.css">
+    <link rel="stylesheet" href="resources/fonts.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" 
+    integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    
 </head>
 <body> 
+    <div class="social">
+        <ul>
+            <li><a href="https://www.facebook.com/fabianalexis.seguraestevez"  target="_blank" class="icon-facebook"></a></li>
+            <li><a href="https://www.instagram.com/fabian_segura22/?hl=es"  target="_blank" class="icon-instagram"></a></li>
+            <li><a href="https://twitter.com/FabianEstevez9"  target="_blank" class="icon-twitter"></a></li>
+            <li><a href="https://www.twitch.tv/doguitor1"  target="_blank" class="icon-twitch"></a></li>
+            <li><a href="https://discord.gg/VnAzkGGx2b"  target="_blank" class="icon-discord"></a></li>
+        </ul>
+    </div>
+
+   
+    <div class="cards-item-content">
+        <div class="cards-item-img">
+            <img src="resources/TRANSPARENT (5).png" alt="logo">
+        </div>
+        <div class="card-item-description">
+            <h1 class="card-item-title" style="color: white;">FAN PAGE STREAMERS</h1>
+        </div>
+        <div class="card-item-search">
+            <label style="color: white;">Buscar</label>
+            <br><br>
+            <input>
+        </div>
+    </div>
+    <br>
+    <div>
+        <img src="resources/BANNER.png" alt="Banner de la pagina" class="banner-img">
+    </div>
+    <br>
+    <div class="card text-center">
+        <div class="card-header">
+          <ul class="nav nav-pills card-header-pills">
+            <li class="nav-item">
+              <a class="nav-link" href="#">Historia</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#plataformas">Plataformas</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#streamers">Streamers</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#destacados">Destacados</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+
+
+
+    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-indicators" id="plataformas">
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="resources/f1.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>First slide label</h5>
+              <p>Some representative placeholder content for the first slide.</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="resources/f1.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Second slide label</h5>
+              <p>Some representative placeholder content for the second slide.</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="resources/f1.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Third slide label</h5>
+              <p>Some representative placeholder content for the third slide.</p>
+            </div>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"  data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"  data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+    </div>
+    <br><br>
+    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-indicators" id="streamers">
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="resources/f1.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>First slide label</h5>
+              <p>Some representative placeholder content for the first slide.</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="resources/f1.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Second slide label</h5>
+              <p>Some representative placeholder content for the second slide.</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="resources/f1.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Third slide label</h5>
+              <p>Some representative placeholder content for the third slide.</p>
+            </div>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"  data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"  data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+    </div>
+    <br><br>
+    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-indicators" id="destacados">
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="resources/f1.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>First slide label</h5>
+              <p>Some representative placeholder content for the first slide.</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="resources/f1.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Second slide label</h5>
+              <p>Some representative placeholder content for the second slide.</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="resources/f1.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Third slide label</h5>
+              <p>Some representative placeholder content for the third slide.</p>
+            </div>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"  data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"  data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+    </div>
+    <div>
+        <footer>
+            <div class="footer-content">
+                <h3>Doguitor</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti, fugiat incidunt. Iure porro et eius explicabo distinctio culpa, 
+                unde ipsam sint officia. Aspernatur molestias ipsam sint eligendi aliquid distinctio incidunt.</p>
+                <ul class="footer-social">
+                    <li><a href="https://www.facebook.com/fabianalexis.seguraestevez"  target="_blank" class="icon-facebook"></a></li>
+                    <li><a href="https://www.instagram.com/fabian_segura22/?hl=es"  target="_blank" class="icon-instagram"></a></li>
+                    <li><a href="https://twitter.com/FabianEstevez9"  target="_blank" class="icon-twitter"></a></li>
+                    <li><a href="https://www.twitch.tv/doguitor1"  target="_blank" class="icon-twitch"></a></li>
+                     <li><a href="https://discord.gg/VnAzkGGx2b"  target="_blank" class="icon-discord"></a></li>
+                </ul>
+            </div>
+            <div class="footer-bottom">
+                <p>copyright &copy; 2021 Doguitor. disigned by <span>Fabian Segura</span></p>
+            </div>
+
+        </footer>
+    </div>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" 
+    integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" 
+    crossorigin="anonymous"></script>
+
 
 </body>
 </html>
